# Integration-Orangepi-LIDAR-untuk-Path-Planning

./: .gitignore  CMakeLists.txt  README.md  arduino_serial_bridge.py  package.xml  requirements.txt  robot_autostart.sh  robot_core.service  rplidar-firebase-bridge.py
arduino_firmware/: arduino_firmware.ino
config/: nav2_params.yaml
launch/: navigation_stack_launch.py  slam_nav_launch.py
scripts/: create_udev_rules.sh  rplidar.rules
